
Bug fixes:

* Fix "t undefined in scope error" #125, contributed by @Calligross (https://github.com/calligross)

Minor changes:

* Removed the dependency on `XML`.  This will only affect a non-essential function (`getCranDesription`) on versions of R prior to R-3.4.0
* Removed reference to dependency on `curl`, since the actual dependency was removed in a previous version of the package.




miniCRAN v0.2.12 (Release date: 2019-07-06)
================

New features: 
* None

Bug fixes:

* Experimental support for mac.binary.el-capitan (#111 and #121)
* Fixed description of `availPkgs` in documentation (#108)
* Added backward compatibility for R<3.3.0 when `repos` argument to `available.packages()` was added (#109)

API change

* On R version 3.4.0 and earlier, `getCranDescription()` will throw a warning that this function is no longer supported.  This is in preparation to remove the dependency on `XML` in a future release.

Internal changes

* Rewrote mocking mechanism in tests




miniCRAN v0.2.11 (Release date: 2018-01-15)
================

New features: 
* None

Bug fixes:
* use cran.microsoft.com instead of mran.microsoft.com for MRAN url (#104)

Other changes:
* Use `pkgdown` to build documentation site (#105)
* Speed up unit testing by mocking internal functions (#107)




miniCRAN v0.2.10 (Release date: 2017-10-21)
================

New features:
* Added package option `minicran.mran` which sets default preferred MRAN url (#72)

Bug fixes:
* Fixed 'Error in basename(prev)' when calling `addPackage()` (#99)

Other improvements:
* Fixed typos in vignettes (@ryanatanner PR#93 and PR#94)
* Added note on system requirements of curl and XML (#98)

Changed maintainer to apdevries@gmail.com #103


miniCRAN v0.2.9 (Release date: 2017-07-20)
===============

* The igraph now gets imported (previously it was a Suggests)
* Use `tools::CRAN_package_db()` to read package description on CRAN
* Extend test suite coverage


miniCRAN v0.2.8 (Release date: 2017-06-19)