@@ -21,4 +21,4 @@ on_failure(is_package) <- function(call, env) {
   paste0(deparse(call$x), "pkg should be a character vector with package names")
 }
 
-
+is_package_vector <- is_package
